# simple-dicom-viewer

./: .gitignore  235.js  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: imaging.rs
src/: imaging.rs  lib.rs
static/: index.html
tests/: app.rs
